[FIX] project: align the field and the field selection for analytic
setting

This commit's purpose is to fix the alignment of the plans and the
selection fields associated to those plan in the setting of the form
view of projects. The issue was caused by the extra 'div' inside the
group, which was disrupting the usual display order of 'field name' -
'field selection'

Solution: remove that extra div and adds a css class to handle margin
issue with the group section. Adding a 'colspan' was a cleaner solution,
but it also update the display of fields in mobile view, and we don't
want that.

task - 4397694

closes odoo/odoo#194037

X-original-commit: bdfa7de400aa562662d33dca5ef209008f8819a8

--- a/addons/project/static/src/scss/project_form.scss
+++ b/addons/project/static/src/scss/project_form.scss
@@ -49,3 +49,9 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+.o_flexible_margin_top {
+    @media only screen and (max-width: 650px) {
+        margin-top: 10px;
+    }
+}
